--- a/_config.yml
+++ b/_config.yml
@@ -128,9 +128,9 @@ iLotus:
 
 #站点基础配置
 title: 保国丁的博客
-subTitle: I Say Me | 我说我自己 | 我说世界
-description: Baoguo's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程.
-keywords: Treri,Linux,Web,前端开发,自说Me话,ISayme,Internet
+subTitle: 我收集 | 我整理 | 我原创 | 我分享
+description: Baoguo's Individual Blog. 不管是工作还是学习，总有很多东西，学过、用过然后就忘记了，在这里收集整理，为人也为自己.
+keywords: Linux, 哲学, 保国
 url: http://www.baoguoding.com
 
 author:
