--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ iLotus:
 
 #站点基础配置
 title: 保国丁的博客
-subTitle: 我 收集 | 我 整理 | 我 原创 | 我 分享
+subTitle: 我 爱 收集 | 我 爱 整理 | 我 爱 原创 | 我 爱 分享
 description: Baoguo's Individual Blog. 不管是工作还是学习，总有很多东西，学过、用过然后就忘记了，在这里收集整理，为人也为自己.
 keywords: Linux, 哲学, 保国
 url: http://www.baoguoding.com
