--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ iLotus:
 #      class: none
 
 #站点基础配置
-title: 保国丁的博客
+title: 丁保国的博客
 subTitle: 我 爱 收集 | 我 爱 整理 | 我 爱 原创 | 我 爱 分享
 description: Baoguo's Individual Blog. 不管是工作还是学习，总有很多东西，学过、用过然后就忘记了，在这里收集整理，为人也为自己.
 keywords: Linux, 哲学, 保国, 混沌, 混沌商学院, 研习社, PMP, TOC, 丁保国, 保国丁, 货代, 进口, 出口, Kubernetes, k8s, docker, MBA, NPDP, centos, 细节如何轻松影响他人, 公司金融学, 货代, 财务会计, 人力资源, 市场营销, 商业模式, 哲科思维, 关税, 贸易战, 创新管理, 组织行为学, 市场, 战略管理, 金融学, 经济学, 项目管理, 社会, 羊皮卷
